--- a/critter/pom.xml
+++ b/critter/pom.xml
@@ -73,8 +73,10 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>2.22.0</version>
 				<configuration>
     					<testFailureIgnore>true</testFailureIgnore>
+					<useSystemClassLoader>false</useSystemClassLoader>
   				</configuration>
 			</plugin>
 		</plugins>
