--- a/critter/pom.xml
+++ b/critter/pom.xml
@@ -77,7 +77,19 @@
 			<plugin>
 			  <groupId>org.apache.maven.plugins</groupId>
 			  <artifactId>maven-surefire-plugin</artifactId>
-			  <version>2.20</version>
+			  <version>2.21.0</version>
+				<configuration>
+					<testFailureIgnore>true</testFailureIgnore>
+					<skip>false</skip>
+					<reuseForks>false</reuseForks>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+					<argLine>-Dfile.encoding=UTF-8</argLine>
+					<useSystemClassLoader>false</useSystemClassLoader>
+					<includes>
+					    <!--Test* classes for the app testing -->
+					    <include>**/directory/Test*.java</include>
+					</includes>
+			    </configuration>
 			</plugin>
 		</plugins>
 	</build>
