--- a/critter/pom.xml
+++ b/critter/pom.xml
@@ -79,7 +79,10 @@
 			  <groupId>org.apache.maven.plugins</groupId>
 			  <artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
+					<testFailureIgnore>true</testFailureIgnore>
+                			<skip>false</skip>
 					<reuseForks>false</reuseForks>
+					<useSystemClassLoader>false</useSystemClassLoader>
 			    </configuration>
 			</plugin>
 		</plugins>
