--- a/critter/pom.xml
+++ b/critter/pom.xml
@@ -78,6 +78,7 @@
 			<plugin>
 			  <groupId>org.apache.maven.plugins</groupId>
 			  <artifactId>maven-surefire-plugin</artifactId>
+			  <version>2.20</version>
 				<configuration>
 					<testFailureIgnore>true</testFailureIgnore>
                 			<skip>false</skip>
